--- a/client/src/pages/Classbook/components/Cards/ClassbookCards.module.css
+++ b/client/src/pages/Classbook/components/Cards/ClassbookCards.module.css
@@ -44,7 +44,7 @@
     row-gap: 1.25rem;
 }
 .columns {
-    max-width: 91.625rem;
+    max-width: 926px;
     padding: 0;
 }
 .text-box {
